# swagger-doc

./: .gitignore  README.md  install_deps.py  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml  test.yml
examples/: complex.py  enums.py  models.py  sample.py  security.py
swagger_doc/: __init__.py  builders.py  handlers.py  models.py  utils.py
swagger_doc/static/redoc_ui/: redoc.css  redoc.js  ui.jinja2
swagger_doc/static/swagger_ui/: swagger-ui-bundle.js  swagger-ui-standalone-preset.js  ui.jinja2
swagger_doc/swagger_ui/: ui.jinja2
tests/: test_swagger.py
