[metadata]
name = swagger-doc-v2
version = 0.1
author = elijahxb
author_email = elijahxb@outlook.com
description = swagger doc for tornado
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elijahxb/swagger-doc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pydantic>=2.11.3
    tornado>=6.0.1
    Jinja2~=3
    PyYaml~=6

[options.package_data]
swagger-doc = *.py, static/redoc_ui/*, static/swagger_ui/*, templates/*
