[metadata]
name = swagger-doc-v2
version = 0.1
author = elijahxb
author_email = elijahxb@outlook.com
description = swagger doc for tornado
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elijahxb/swagger-doc
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pydantic>=2.11.3
    tornado>=6.0.1
    Jinja2>=2
    PyYaml>=5
include_package_data = True
zip_safe = False

[options.package_data]
swagger-doc = *.py, static/redoc_ui/*, static/swagger_ui/*, templates/*
